// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooTabsComponent Rendering Should render 1`] = `
<yoo-sticky
  class="hydrated"
  data-yoo-sticky-host=""
>
  
  <div
    class="outer-container"
    data-yoo-sticky=""
    data-yoo-sticky-slot=""
    style="position: sticky;"
  >
    
  </div>
</yoo-sticky>
`;

exports[`YooTabsComponent Rendering Should render with a slot 1`] = `
<yoo-sticky
  class="hydrated"
  data-yoo-sticky-host=""
>
  
  
  
  
  <div
    class="outer-container"
    data-yoo-sticky=""
    data-yoo-sticky-slot=""
    style="position: sticky;"
  >
    
    
                            
    <div>
      
                                
      <span>
        Sticky Slot
      </span>
      
                            
    </div>
    
                        
  </div>
</yoo-sticky>
`;
